--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
   <p>We may update this privacy policy from time to time. Any changes will be posted on this page.</p>
 
   <h2>Contact</h2>
-  <p>If you have any questions or concerns about this policy, please contact us at: your-email@example.com</p>
+  <p>If you have any questions or concerns about this policy, please contact us at: SimpleFinanceApps@outlook.com</p>
 </body>
 </html>
