--- a/index.html
+++ b/index.html
@@ -8,21 +8,35 @@
   <h1>Privacy Policy</h1>
   <p>Effective Date: August 2, 2025</p>
 
-  <p>Simple Finance Calculators does not collect, store, or share any personal information from users.</p>
+  <p>Simple Finance Calculators is committed to protecting your privacy. This app does not collect, store, or share any personal information from users.</p>
 
   <h2>Data Collection</h2>
-  <p>This app does not require users to create an account, provide personal details, or share financial data. All calculations are performed locally on the device.</p>
+  <p>No personal data is collected through this app. All financial calculations are performed locally on your device. You are not required to create an account or provide any personal or financial information to use the app.</p>
+
+  <h2>Referral Link Disclosure</h2>
+  <p>This app includes a promotional referral link to Wealthsimple. If you choose to use this link, the developer may receive a referral bonus from Wealthsimple. The referral program is operated by Wealthsimple and subject to their terms and privacy policy, which you can view <a href="https://www.wealthsimple.com/en-ca/legal/privacy" target="_blank">here</a>.</p>
+
+  <p><strong>Disclaimer:</strong> This app is not sponsored, endorsed, or affiliated with Wealthsimple. The inclusion of a referral link does not imply any partnership or official relationship.</p>
 
   <h2>Third-Party Services</h2>
-  <p>We do not use third-party analytics, advertising, or tracking services in this app.</p>
+  <p>No third-party analytics, advertising, or tracking services are used in this app.</p>
 
   <h2>Permissions</h2>
-  <p>The app may request basic device permissions (e.g., internet access) solely for functionality, not for data collection.</p>
+  <p>The app may request basic device permissions (such as internet access) solely to display the referral banner. These permissions are not used to collect or transmit any user data.</p>
+
+  <h2>External Links</h2>
+  <p>This app may contain links to external websites, including Wealthsimple. We are not responsible for the content, privacy practices, or terms of use of these external sites.</p>
+
+  <h2>No Financial Advice</h2>
+  <p>This app is intended for informational and educational purposes only. It does not provide financial, investment, tax, or legal advice. The tools and calculators are designed to help users explore financial scenarios, but they should not be relied upon for making financial decisions. Users should consult a qualified financial advisor before making any financial choices.</p>
+
+  <h2>Limitation of Liability</h2>
+  <p>Simple Finance Calculators is not responsible for any actions taken by Wealthsimple or any outcomes resulting from the use of their services. Users are encouraged to review Wealthsimple’s terms and privacy policy before signing up.</p>
 
   <h2>Changes to This Policy</h2>
-  <p>We may update this privacy policy from time to time. Any changes will be posted on this page.</p>
+  <p>We may update this privacy policy from time to time. Any changes will be posted on this page. Continued use of the app after changes are made constitutes acceptance of the updated policy.</p>
 
   <h2>Contact</h2>
-  <p>If you have any questions or concerns about this policy, please contact us at: SimpleFinanceApps@outlook.com</p>
+  <p>If you have any questions or concerns about this privacy policy, please contact us at: your-email@example.com</p>
 </body>
 </html>
