--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
   <h2>Third-Party Services</h2>
   <p>No third-party analytics, advertising, or tracking services are used in this app.</p>
 
-  <h2>Permissions</h2>
-  <p>The app may request basic device permissions (such as internet access) solely to display the referral banner. These permissions are not used to collect or transmit any user data.</p>
-
   <h2>External Links</h2>
   <p>This app may contain links to external websites, including Wealthsimple. We are not responsible for the content, privacy practices, or terms of use of these external sites.</p>
 
@@ -37,6 +34,6 @@
   <p>We may update this privacy policy from time to time. Any changes will be posted on this page. Continued use of the app after changes are made constitutes acceptance of the updated policy.</p>
 
   <h2>Contact</h2>
-  <p>If you have any questions or concerns about this privacy policy, please contact us at: your-email@example.com</p>
+  <p>If you have any questions or concerns about this privacy policy, please contact us at: <a href="mailto:SimpleFinanceApps@outlook.com">SimpleFinanceApps@outlook.com</a></p>
 </body>
 </html>
